[package]
name = "coin"
version = "0.1.0"
authors = ["Sam Blazes <sblazes@caltech.edu>"]

[dependencies]
bitboard = {path = "../bitboard"}
heuristic = {path = "../heuristic"}
mcts = {path = "../mcts"}
# search = {path = "../search"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.3"
# tensorflow = "0.3"
