[package]
name = "coin"
version = "0.1.0"
authors = ["Sam Blazes <sblazes@caltech.edu>"]

[dependencies]
bitboard = {path = "../bitboard"}
# heuristic = {path = "../heuristic"}
mcts = {path = "../mcts"}
# search = {path = "../search"}
# pattern_engine = {path = "../pattern_engine"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.3"
glob = "0.2"
indexmap = "0.4"
# tensorflow = "0.3"
