[package]
name = "mcts"
version = "0.1.0"
authors = ["Sam Blazes <sblazes@caltech.edu>"]

[lib]
name = "mcts"
path = "src/lib.rs"

[[bin]]
name = "mcts_train"
path = "src/bin.rs"

[dependencies]
bitboard = {path = "../bitboard"}
rand = "0.5.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.9.2"
threadpool= "1.7"
scoped_threadpool = "0.1"
indexmap = "0.4"
clap = "2.32.0"
rayon = "1.0.2"
parking_lot = "0.6.4"

[dependencies.tensorflow]
git = "https://github.com/tensorflow/rust.git"

features = ["tensorflow_unstable"]