[package]
name = "trainer"
version = "0.1.0"
authors = ["Sam Blazes <sblazes@caltech.edu>"]

[dependencies]
bitboard = {path = "../bitboard"}
pattern_engine = {path = "../pattern_engine"}
heuristic = {path = "../heuristic"}
search = {path = "../search"}
rand = "0.3"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
bincode = "0.8.0"
clap = "2.25.0"